...
    recordId: string
    recordLabel: string
  }
}

type OrgTabParamList = {
  Dashboard: undefined
  Claims: undefined
  Credentials: undefined
  Workspace: undefined
  More: undefined
}

...
